# pytire

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: continous_integration.yaml  coverage.yml  lint.yml  publish.yaml  test.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst  licence.md  readme_link.rst
docs/source/_build/html/: .buildinfo  genindex.html  index.html  licence.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/_build/html/.doctrees/: environment.pickle  index.doctree  licence.doctree
docs/source/_build/html/.doctrees/pytire/: pytire.constant.doctree  pytire.doctree  pytire.enums.doctree  pytire.tire.doctree  pytire.util.doctree
docs/source/_build/html/_sources/: index.rst.txt  licence.rst.txt
docs/source/_build/html/_sources/pytire/: pytire.constant.rst.txt  pytire.enums.rst.txt  pytire.util.rst.txt
docs/source/_build/html/pytire/: pytire.constant.html  pytire.enums.html  pytire.html  pytire.tire.html  pytire.util.html
docs/source/pytire/: pytire.rst  pytire.tire.rst
pytire/: __init__.py  constant.py  enums.py  geometry.py  size.py  tire.py  util.py
scripts/: setup-environment.sh
tests/: test_geometry.py  test_size.py  test_tire.py  test_util.py
