[tool.poetry]
name = "pytire"
version = "0.1.0"
description = "Python library to handle tire attributes."
authors = ["girotobial <abrobinson1907@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"
mypy = "^0.812"
tox = "^3.22.0"
black = "^20.8b1"
pytest-cov = "^2.11.1"
isort = "^5.7.0"
flake8-bugbear = "^20.11.1"
pep8-naming = "^0.11.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.3.1"
flake8-spellcheck = "^0.23.0"
flake8-use-fstring = "^1.1"
Sphinx = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
